Fix bug causing text not to wrap

--- a/app/assets/stylesheets/components/messages.scss
+++ b/app/assets/stylesheets/components/messages.scss
@@ -20,6 +20,8 @@
   padding: 16px;
   border-bottom: 1px solid $transparent-dark-purple;
   margin-bottom: 8px;
+  word-wrap: break-word;
+  white-space: normal;
 
   h4{
     color: $darker-purple;
