--- a/app/assets/stylesheets/components/sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar.scss
@@ -11,7 +11,6 @@
   padding-top: 104px;
   overflow-y: auto;
   overflow-x: hidden;
-  text-overflow: ellipsis;
 
   .group {
     height: auto;
@@ -46,8 +45,6 @@
     color: $light-purple;
     padding: 4px;
     border-radius: 4px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
 
     &:hover {
       background-color: $darker-purple;
